chapter5/project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-vol
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: todo-app
          image: TODO_APP
          ports:
            - containerPort: 3000
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /readyz
              port: 3000
          volumeMounts:
            - name: image-vol
              mountPath: /app/public/images
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "10m"
              memory: "40Mi"
